2019-09-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: revised argument checking

2019-09-29 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: Completed manual page for command ::rivet::thread_id
    * src/mod_rivet_ng/rivetCore.c: Rivet_GetThreadId rewritten. Now the
    command accepts an optional argument to select decimal or hexadecimal (default)
    output 

2019-08-05 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/directives.xml: Documenting SingleThreadExit directive

2019-07-27 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml,src/mod_rivet_ng/rivetCore.c: Add ::rivet::thread_id
    manual page

2019-06-25 Massimo Manghi <mxmanghi@apache.org>
    * : Single thread exit implementation for mod_rivet 3.2
    * src/mod_rivet_ng/rivet_[.*]_mpm.c: further simplified code by removing 
    redundant flags. Changing function names scheme

2019-05-24 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: Add Tcl_DecrRefCnt after
    RivetCache_StoreScript as this function itself calls
    Tcl_IncrRefCnt to preserve the Tcl_Obj with the script code
    
2019-04-13 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: Correct wrong header in ::rivet::http_accept code example

2019-04-12 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: wrong references corrected

2019-02-19 Massimo Manghi <mxmanghi@apache.org>
    * .appveyor.yml: merging from master in order to have new tags generate
    artifacts

2019-02-16 Georgios Petasis <petasisg@apache.org>
    * .appveyor.yml: Added support for creating a zip with the installed rivet
    files (both module and library), and create an artifact. If a tag is added
    (in all branches), the zip will be added to the release.

2019-01-21 Massimo Manghi <mxmanghi@apache.org>
    * src/rivet.h: Add error message buffer size definition (was still hardcoded
    here and there)